@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.283 2008-10-12 02:47:49 webchick Exp $
+// $Id: CHANGELOG.txt,v 1.284 2008-10-19 20:55:07 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -28,6 +28,7 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Image toolkits are now provided by modules (rather than requiring a manual
       file copy to the includes directory).
     * Added an edit tab to taxonomy term pages.
+    * Redesigned password strength validator.
 - News aggregator:
     * Added OPML import functionality for RSS feeds.
     * Optionally, RSS feeds may be configured to not automatically generate feed blocks.
